--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -46,7 +46,6 @@ main {
     border: 1px solid var(--primary-input-border);
     width: 176px;
     height: 50px;
-    padding: 14px 29px;
     border-radius: 15px;
     background-color: inherit;
     margin-bottom: 24px;
@@ -112,7 +111,6 @@ main {
 .filter-item:hover {
     border: 1px solid var(--primary-brend);
 }
-
 /* Фото рецептів */
 .list-item {
     margin: 0 auto !important;
@@ -163,7 +161,7 @@ main {
 }
 
 .filter-input {
-    color: rgba(5, 5, 5, 0.5);
+    color: var(--primary-input-title-color);
 }
 
 .filter-input-wrap {
@@ -284,8 +282,7 @@ main {
     width: 44px;
     height: 44px;
     margin-right: 8px;
-    transition:
-        border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    transition: border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
@@ -298,8 +295,7 @@ main {
     width: 44px;
     height: 44px;
     margin-right: 8px;
-    transition:
-        border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    transition: border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
@@ -312,8 +308,7 @@ main {
     width: 44px;
     height: 44px;
     margin-right: 8px;
-    transition:
-        border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    transition: border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
@@ -424,7 +419,6 @@ main {
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
-    color: rgba(5, 5, 5, 0.5);
     margin-bottom: 20px;
 }
 
