--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -255,7 +255,9 @@ main {
     border-radius: 50%;
     margin-right: 8px;
     font-family: inter;
-    border-color: #0505054d;
+    color: var(--primary-title-color);
+    border: 1px solid var(--primary-input-border);
+    background-color: inherit;
     transition:
         border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
