--- a/src/styles/modal-order-now.css
+++ b/src/styles/modal-order-now.css
@@ -3,7 +3,7 @@
 
 .modal-order {
     width: 290px;
-    background-color: var(--dark-title-color);
+    background-color: var(--modal-bg);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -16,7 +16,7 @@
 .modal-close-btn {
     width: 20px;
     height: 20px;
-    background-color: transparent;
+    background-color: inherit;
     border: none;
     position: absolute;
     top: 10px;
@@ -38,6 +38,7 @@
     width: 100%;
     height: 46px;
     border: 1px solid var(--primary-input-border);
+    background-color: inherit;
     border-radius: 15px;
     padding: 8px 8px;
     margin: 0;
@@ -52,6 +53,7 @@ input {
     width: 100%;
     height: 100px;
     border: 1px solid var(--primary-input-border);
+    background-color: inherit;
     border-radius: 15px;
     padding: 8px 8px;
     resize: none;
